--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.23.1",
     "axios": "^0.27.2",
     "html-react-parser": "^3.0.1",
     "next": "12.2.3",
